--- a/src/app/main/unit/add-unit/add-unit.component.scss
+++ b/src/app/main/unit/add-unit/add-unit.component.scss
@@ -42,3 +42,10 @@
     font-size: 13px;
     margin: 0 10px;
 }
+.error-detail{
+    font-size: inherit;
+    padding: 6px;
+    margin-top: 5px;
+    margin-bottom: 0;
+  }
+  
