--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -8,8 +8,13 @@
                 <div class="label text-color">Tên tổ chức <span class="required-title">*</span></div>
                 <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="name" autofocus>
+                    <input type="text" formControlName="name">
                 </div>
+                <div *ngIf="!addForm.get('name')?.valid && (addForm.get('name')?.dirty || (addForm.get('name')?.touched))">
+                    <p class="alert alert-danger error-detail" role="alert" [hidden]="!addForm.get('name')?.errors?.required">
+                    Tên tổ chức không được để trống
+                    </p>
+                </div>  
             </div>
         
             <div class="col-md-6">
@@ -18,6 +23,11 @@
                     <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="short_name">
                 </div>
+                <div *ngIf="!addForm.get('short_name')?.valid && (addForm.get('short_name')?.dirty || (addForm.get('short_name')?.touched))">
+                    <p class="alert alert-danger error-detail" role="alert" [hidden]="!addForm.get('short_name')?.errors?.required">
+                    Tên viết tắt không được để trống
+                    </p>
+                </div>  
             </div>
         </div>
 
@@ -26,7 +36,7 @@
                 <div class="label text-color">Mã tổ chức <span class="required-title">*</span></div>
                 <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="code" autofocus>
+                    <input type="text" formControlName="code">
                 </div>
             </div>
         
@@ -44,7 +54,7 @@
                 <div class="label text-color">Tổ chức cấp trên</div>
                 <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="parent_id" autofocus>
+                    <input type="text" formControlName="parent_id">
                 </div>
             </div>
         
@@ -62,7 +72,7 @@
                 <div class="label text-color">Fax</div>
                 <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="fax" autofocus>
+                    <input type="text" formControlName="fax">
                 </div>
             </div>
         
@@ -73,7 +83,7 @@
                         <span> Hoạt động</span>
                     </div>
                     <div class="col-md-7">
-                        <input type="radio" name='confirm-radio-consider' [value]="2" formControlName="status" name="status">
+                        <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
                         <span> Không hoạt động</span>
                     </div>
                 </div>
