--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -4,15 +4,17 @@
     <div class="col-md-3">
       <div>{{'createdate.start' | translate}}</div>
       <div class="input-line">
-        <ngx-datepicker [(ngModel)]="filter_from_date" [options]="options" class="date-picker"></ngx-datepicker>
-        <img src="assets/img/db_calendar.svg" class="input-img">
+        <p-calendar [(ngModel)]="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
+        <!-- <ngx-datepicker [(ngModel)]="filter_from_date" [options]="options" class="date-picker"></ngx-datepicker>
+        <img src="assets/img/db_calendar.svg" class="input-img"> -->
       </div>
     </div>
     <div class="col-md-3">
       <div>{{'createdate.end' | translate}}</div>
       <div class="input-line">
-        <ngx-datepicker [(ngModel)]="filter_to_date" [options]="options" class="date-picker"></ngx-datepicker>
-        <img src="assets/img/db_calendar.svg" class="input-img">
+        <p-calendar [(ngModel)]="filter_to_date" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
+        <!-- <ngx-datepicker [(ngModel)]="filter_to_date" [options]="options" class="date-picker"></ngx-datepicker>
+        <img src="assets/img/db_calendar.svg" class="input-img"> -->
       </div>
     </div>
     <div class="col-md-3 btn_search">
