--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -10,11 +10,11 @@
                     <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="name">
                 </div>
-                <div *ngIf="!addForm.get('name')?.valid && (addForm.get('name')?.dirty || (addForm.get('name')?.touched))">
+                <!-- <div *ngIf="!addForm.get('name')?.valid && (addForm.get('name')?.dirty || (addForm.get('name')?.touched))">
                     <p class="alert alert-danger error-detail" role="alert" [hidden]="!addForm.get('name')?.errors?.required">
                     Tên tổ chức không được để trống
                     </p>
-                </div>  
+                </div>   -->
             </div>
         
             <div class="col-md-6">
@@ -23,11 +23,11 @@
                     <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="short_name">
                 </div>
-                <div *ngIf="!addForm.get('short_name')?.valid && (addForm.get('short_name')?.dirty || (addForm.get('short_name')?.touched))">
+                <!-- <div *ngIf="!addForm.get('short_name')?.valid && (addForm.get('short_name')?.dirty || (addForm.get('short_name')?.touched))">
                     <p class="alert alert-danger error-detail" role="alert" [hidden]="!addForm.get('short_name')?.errors?.required">
                     Tên viết tắt không được để trống
                     </p>
-                </div>  
+                </div>   -->
             </div>
         </div>
 
@@ -52,9 +52,19 @@
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
                 <div class="label text-color">Tổ chức cấp trên</div>
-                <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="parent_id">
+                <div>
+                    <p-dropdown appendTo="body"
+                        [options]="orgList" 
+                        formControlName="parent_id" 
+                        optionLabel="name" 
+                        optionValue="id" 
+                        placeholder="Chọn tổ chức" 
+                        [filter]="true" 
+                        filterBy="name" 
+                        [showClear]="true"  
+                        ></p-dropdown>
+                    <!-- <img src="assets/img/icon_name.svg" class="input-img">
+                    <input type="text" formControlName="parent_id"> -->
                 </div>
             </div>
         
