--- a/src/app/main/unit/add-unit/add-unit.component.scss
+++ b/src/app/main/unit/add-unit/add-unit.component.scss
@@ -48,4 +48,27 @@
     margin-top: 5px;
     margin-bottom: 0;
   }
+  :host ::ng-deep {
+    .p-dropdown, .p-dropdown-label, .p-dropdown-panel .p-dropdown-items .p-dropdown-item, .p-element, .p-dropdown-items {
+        font-size: 13px !important;
+        font-family: font_lexend_deca !important;
+    }
+    
+    .p-dropdown {
+        border: 1px solid #106DB6;
+        border-radius: 5px;
+        height: 33px;
+        width: 100%;
+        outline: 0;
+    }
+    .p-inputtext{
+        padding: 0.2rem;
+    }
+    .p-dropdown-panel {
+        padding: 0.2rem;
+    }
+    .p-dropdown-label {
+        padding: 5px;
+    }
+}
   
