--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -21,9 +21,8 @@
       <p-table [value]="list" [paginator]="true" [rows]="5" id="table">
         <ng-template pTemplate="header" let-columns>
           <tr>
-              <th *ngFor="let col of cols" [pSortableColumn]="col.field">
+              <th *ngFor="let col of cols" [style]='col.style'>
                   {{col.header}}
-                  <p-sortIcon [field]="col.field" *ngIf="col.header!=''"></p-sortIcon>
               </th>
           </tr>
         </ng-template>
@@ -34,9 +33,8 @@
                 <td>{{list.code}}</td>
                 <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td>
                 <td>{{list.parent_id==null?'Tổ chức cha':'Tổ chức con'}}</td>
-                <td>
+                <td style="text-align: center">
                   <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUnit(list.id)" style="cursor: pointer;"/>
-                  <img src="../../../assets/img/icon_delete.svg" width="16px" (click)="addUnit()" style="margin-left: 10px;cursor: pointer;"/>
                 </td>
             </tr>
         </ng-template>
