--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -23,6 +23,8 @@
 #table {
     border-collapse: collapse;
     width: 100%;
+    font-size: 13px;
+    font-family: font_lexend_deca;
   }
   #table td, #table th {
     //border: 1px solid #ddd;
@@ -34,9 +36,22 @@
   #table tr:hover {background-color: #ddd;}
   
   #table th {
-    text-align: center;
+    //text-align: center;
     background-color: #E2ECF6;
     color: #106DB6;
+  }
+
+  #table tr:last-child th:first-child {
+    border-top-left-radius: 10px;
+  }
+  #table tr:last-child th:last-child {
+    border-top-right-radius: 10px;
+  }
+  #table tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+  }
+  #table tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
   }
 
   :host ::ng-deep {
@@ -96,19 +111,6 @@
   .footer_page_number{
     color: #0160AE
   }
-  
-  #table tr:last-child th:first-child {
-    border-top-left-radius: 10px;
-  }
-  #table tr:last-child th:last-child {
-    border-top-right-radius: 10px;
-  }
-  #table tr:last-child td:first-child {
-    border-bottom-left-radius: 10px;
-  }
-  #table tr:last-child td:last-child {
-    border-bottom-right-radius: 10px;
-  }
 
   :host ::ng-deep {
     .pi-fw {
@@ -116,7 +118,7 @@
       margin-right: 5px;
     }
   
-    .p-paginator-pages button{
+    .p-paginator .p-paginator-pages .p-paginator-page{
       color: black;
       float: left;
       padding: 8px 16px;
@@ -124,13 +126,13 @@
       transition: background-color .3s;
       border: 1px solid #ddd;
       margin: 4px;
-      height: 26px;
+      height: 26px !important;
       width: 50px;
       border-radius: 5px;
       background-color: #e6e6e6;
     }
   
-    .p-paginator-pages button.p-highlight {
+    .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
       background-color: #2199e8;
       color: white;
       border: 1px solid #2199e8;
@@ -138,5 +140,17 @@
   
     .p-paginator-bottom .p-ripple{
       padding: 10px;
+      border-width: 0 !important;
     }
+
+    .p-datatable-table, .ng-star-inserted{
+      font-size: 13px;
+      font-family: font_lexend_deca;
+    }
+    .p-datatable .p-paginator-bottom {
+      border-width: 0;
   }
+
+  }
+
+  
