--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -2,32 +2,21 @@
     <div style="text-align: center; font-weight: bold">
       <h3 style="color: #106DB6; font-family: inherit;">{{this.datas.title}}</h3>
     </div>
-    <form (ngSubmit)="onSubmit()" [formGroup]="addForm" class="content">
+    <form [formGroup]="addForm" class="content">
         <div class="row">
             <div class="col-md-6">
                 <div class="label text-color">Tên tổ chức <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="name">
+                    <input type="text" formControlName="nameOrg">
                 </div>
-                <!-- <div *ngIf="!addForm.get('name')?.valid && (addForm.get('name')?.dirty || (addForm.get('name')?.touched))">
-                    <p class="alert alert-danger error-detail" role="alert" [hidden]="!addForm.get('name')?.errors?.required">
-                    Tên tổ chức không được để trống
-                    </p>
-                </div>   -->
             </div>
         
             <div class="col-md-6">
                 <div class="label text-color">Tên viết tắt <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="short_name">
                 </div>
-                <!-- <div *ngIf="!addForm.get('short_name')?.valid && (addForm.get('short_name')?.dirty || (addForm.get('short_name')?.touched))">
-                    <p class="alert alert-danger error-detail" role="alert" [hidden]="!addForm.get('short_name')?.errors?.required">
-                    Tên viết tắt không được để trống
-                    </p>
-                </div>   -->
+               
             </div>
         </div>
 
@@ -35,7 +24,6 @@
             <div class="col-md-6">
                 <div class="label text-color">Mã tổ chức <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="code">
                 </div>
             </div>
@@ -43,7 +31,6 @@
             <div class="col-md-6">
                 <div class="label text-color">Địa chỉ email <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="email">
                 </div>
             </div>
@@ -53,7 +40,9 @@
             <div class="col-md-6">
                 <div class="label text-color">Tổ chức cấp trên</div>
                 <div>
-                    <p-dropdown appendTo="body"
+                    <p-dropdown 
+                        panelStyleClass="font"
+                        appendTo="body"
                         [options]="orgList" 
                         formControlName="parent_id" 
                         optionLabel="name" 
@@ -63,15 +52,12 @@
                         filterBy="name" 
                         [showClear]="true"  
                         ></p-dropdown>
-                    <!-- <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="parent_id"> -->
                 </div>
             </div>
         
             <div class="col-md-6">
                 <div class="label text-color">Số điện thoại <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="phone">
                 </div>
             </div>
@@ -81,7 +67,6 @@
             <div class="col-md-6">
                 <div class="label text-color">Fax</div>
                 <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" formControlName="fax">
                 </div>
             </div>
@@ -102,7 +87,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
-            <button class="save-button">Lưu lại</button>
+            <button class="save-button" (click)="onSubmit()">Lưu lại</button>
         </div>
     </form>
   </div>
