--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -14,143 +14,84 @@
     height: 33px;
     width: 100%;
     border-radius: 5px;
-    border: 1px solid #87CAFF;
+    border: 1px solid #106DB6;
 }
 .btn_search{
     align-self: flex-end;
 }
 
 #table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
+  font-size: 13px;
+  font-family: font_lexend_deca;
+}
+#table td, #table th {
+  //border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#table tr:nth-child(even){background-color: #f2f2f2;}
+
+#table tr:hover {background-color: #ddd;}
+
+#table th {
+  //text-align: center;
+  background-color: #E2ECF6;
+  color: #106DB6;
+}
+
+#table tr:last-child th:first-child {
+  border-top-left-radius: 10px;
+}
+#table tr:last-child th:last-child {
+  border-top-right-radius: 10px;
+}
+#table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+#table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+
+:host ::ng-deep {
+  .pi-fw {
+    color:  #106DB6;
+    margin-right: 5px;
+  }
+
+  .p-paginator .p-paginator-pages .p-paginator-page{
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    margin: 4px;
+    height: 26px !important;
+    width: 50px;
+    border-radius: 5px;
+    background-color: #e6e6e6;
+  }
+
+  .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+    background-color: #2199e8;
+    color: white;
+    border: 1px solid #2199e8;
+  }
+
+  .p-paginator-bottom .p-ripple{
+    padding: 10px;
+    border-width: 0 !important;
+  }
+
+  .p-datatable-table, .ng-star-inserted{
     font-size: 13px;
     font-family: font_lexend_deca;
   }
-  #table td, #table th {
-    //border: 1px solid #ddd;
-    padding: 8px;
+  .p-datatable .p-paginator-bottom {
+    border-width: 0;
   }
-  
-  #table tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #table tr:hover {background-color: #ddd;}
-  
-  #table th {
-    //text-align: center;
-    background-color: #E2ECF6;
-    color: #106DB6;
-  }
-
-  #table tr:last-child th:first-child {
-    border-top-left-radius: 10px;
-  }
-  #table tr:last-child th:last-child {
-    border-top-right-radius: 10px;
-  }
-  #table tr:last-child td:first-child {
-    border-bottom-left-radius: 10px;
-  }
-  #table tr:last-child td:last-child {
-    border-bottom-right-radius: 10px;
-  }
-
-  :host ::ng-deep {
-    .ngx-pagination {
-      padding: 0;
-    }
-    .ngx-pagination a, .ngx-pagination button {
-      text-decoration: none;
-      background: #f3f3f3;
-    }
-    .ngx-pagination li {
-      width: 50px;
-      border-radius: 5px;
-    }
-    .ngx-pagination .pagination-previous a::before,
-    .ngx-pagination .pagination-previous.disabled::before {
-      font-family: 'Material Icons';
-      content: 'keyboard_arrow_left';
-      vertical-align: middle;
-      display: inline;
-      margin: 0;
-    }
-    .ngx-pagination .pagination-next a::after,
-    .ngx-pagination .pagination-next.disabled::after {
-      font-family: 'Material Icons';
-      content: 'keyboard_arrow_right';
-      vertical-align: middle;
-      display: inline;
-      margin: 0;
-    }
-  
-    .nav-link.active {
-      color: #0d6efd;
-      font-weight: 500;
-      background-color: #c5ebff;
-    }
-    .nav-link {
-      color: #6c6c6d;
-    }
-  }
-  
-  .fa_icon{
-    font-size: 17px;
-    cursor: pointer;
-  }
-  .contract_footer{
-    padding-top: 10px;
-    display: flex;
-    justify-content: space-between;
-  }
-  .footer_title{
-    width: 120px;
-  }
-  .footer_pagination{
-    text-align: center;
-  }
-  .footer_page_number{
-    color: #0160AE
-  }
-
-  :host ::ng-deep {
-    .pi-fw {
-      color:  #106DB6;
-      margin-right: 5px;
-    }
-  
-    .p-paginator .p-paginator-pages .p-paginator-page{
-      color: black;
-      float: left;
-      padding: 8px 16px;
-      text-decoration: none;
-      transition: background-color .3s;
-      border: 1px solid #ddd;
-      margin: 4px;
-      height: 26px !important;
-      width: 50px;
-      border-radius: 5px;
-      background-color: #e6e6e6;
-    }
-  
-    .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
-      background-color: #2199e8;
-      color: white;
-      border: 1px solid #2199e8;
-    }
-  
-    .p-paginator-bottom .p-ripple{
-      padding: 10px;
-      border-width: 0 !important;
-    }
-
-    .p-datatable-table, .ng-star-inserted{
-      font-size: 13px;
-      font-family: font_lexend_deca;
-    }
-    .p-datatable .p-paginator-bottom {
-      border-width: 0;
-  }
-
-  }
+}
 
   
