--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -31,6 +31,7 @@
   .p-calendar {
     font-size: 13px !important;
     font-family: 'font_lexend_deca';
+    width: 100%;
   }
   .p-datepicker table td {
     padding: 0;
