--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -1,80 +1,153 @@
-<div class="container-fluid">
-    <div style="text-align: center; font-weight: bold">
-      <h3 style="color: #106DB6; font-family: inherit;">{{this.datas.title}}</h3>
-    </div>
-    <form (ngSubmit)="onSubmit()" [formGroup]="addForm" class="content">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="label text-color">Họ tên <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="name" autofocus>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label text-color">Email <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" formControlName="email">
-                </div>
-            </div>
+<div class="label-header">{{'user.information.individual' | translate}}</div>
+<form [formGroup]="addForm" class="content">
+   <div class="content-body">
+     <div class="row">
+       <div class="col-md-4">
+          <div class="label text-color">{{'user.name' | translate}} <span class="required-title">*</span></div>
+          <div class="input-data">
+              <input type="text" formControlName="name">
+          </div>
+       </div>
+       <div class="col-md-4">
+          <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
+          <div class="input-data">
+              <input type="text" formControlName="email">
+          </div>
+       </div>
+       <div class="col-md-4">
+        <div class="label text-color">{{'user.birthday' | translate}}</div>
+        <div class="input-data">
+            <input type="text" formControlName="birthday">
         </div>
-
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6">
-                <div class="label text-color">Số điện thoại <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="phone" autofocus>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label text-color">Ngày sinh</div>
-                <div class="input-data">
-                    <input type="date" formControlName="birthday">
-                </div>
-            </div>
+       </div>
+     </div>
+   
+     <div class="row">
+       <div class="col-md-4">
+          <div class="label text-color">{{'user.phone' | translate}} <span class="required-title">*</span></div>
+          <div class="input-data">
+              <input type="text" formControlName="phone">
+          </div>
+       </div>
+       <div class="col-md-4">
+         <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
+         <div>
+          <p-dropdown 
+          panelStyleClass="font"
+          [options]="orgList" 
+          formControlName="organizationId" 
+          optionLabel="name" 
+          optionValue="id" 
+          placeholder="Chọn tổ chức" 
+          [filter]="true" 
+          filterBy="name" 
+          [showClear]="true"  
+          ></p-dropdown>
+         </div>
+       </div>
+       <div class="col-md-4">
+        <div class="label text-color">Vai trò <span class="required-title">*</span></div>
+        <div>
+         <p-dropdown 
+         panelStyleClass="font"
+         [options]="orgList" 
+         formControlName="role" 
+         optionLabel="name" 
+         optionValue="id" 
+         placeholder="Chọn vai trò" 
+         [filter]="true" 
+         filterBy="name" 
+         [showClear]="true"  
+         ></p-dropdown>
         </div>
-
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6">
-                <div class="label text-color">Tổ chức <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" formControlName="organizationId" autofocus>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label text-color">Vai trò <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" formControlName="role">
-                </div>
-            </div>
-        </div>
-
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6" style="align-self: center;">
-                <div class="row">
-                    <div class="col-md-5">
-                        <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
-                        <span> Hoạt động</span>
-                    </div>
-                    <div class="col-md-7">
-                        <input type="radio" name='confirm-radio-consider' [value]="2" formControlName="status" name="status">
-                        <span> Không hoạt động</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    
-        <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
-            <button class="save-button">Lưu lại</button>
-        </div>
-    </form>
+      </div>
+     </div>
+     <div class="row">
+      <div class="col-md-2">
+          <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
+          <span> Hoạt động</span>
+      </div>
+      <div class="col-md-2">
+          <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
+          <span> Không hoạt động</span>
+      </div>
   </div>
-  
+   </div>
+   
+   <br>
+   <div class="label-header">{{'sign.information' | translate}}</div>
+   <div class="content-body">
+     <div class="row">
+       <div class="col-md-4">
+         <div class="label-header">
+           {{'sign.file-image' | translate}}
+         </div>
+         <div class="content-body">
+           <div class="select-contract container-img-file" >
+             <div class="upload-image-region d-flex flex-column container-img-file-1">
+               <img src="assets/img/img-icon.svg" alt="#" width="50px">
+               <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
+               <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div>
+             </div>
+           </div>
+         </div>
+       </div>
+   
+       <div class="col-md-4">
+         <div class="label-header">
+           {{'sign.kpi' | translate}}
+         </div>
+         <div class="content-body">
+           <div class="row">
+             <div class="col-md-12">
+               <div>{{'user.phone' | translate}}</div>
+               <div class="input-data">
+                  <input type="text" formControlName="phoneKpi">
+               </div>
+             </div>
+           </div>
+           <div class="row">
+             <div class="col-md-12">
+               <div>{{'user.network' | translate}}</div>
+               <div>
+                <p-dropdown 
+                  panelStyleClass="font"
+                  [options]="orgList" 
+                  formControlName="networkKpi" 
+                  optionLabel="name" 
+                  optionValue="id" 
+                  placeholder="Chọn nhà mạng" 
+                  [filter]="true" 
+                  filterBy="name" 
+                  [showClear]="true"  
+                  ></p-dropdown>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+   
+       <div class="col-md-4">
+         <div class="label-header">
+           {{'sign.hsm' | translate}}
+         </div>
+         <div class="content-body">
+           <div class="row">
+             <div class="col-md-12">
+               <div>{{'user.name.v2' | translate}}</div>
+               <div class="input-data">
+                <input type="text" formControlName="nameHsm">
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+
+   <div class="row" style="justify-content: center;padding-top: 10px;">
+    <button class="cancel-button" (click)="onCancel()" type="button">Hủy</button>
+    <button class="save-button" (click)="onSubmit()">Lưu lại</button>
+  </div>
+  </form>
+   
