--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -60,7 +60,7 @@
     <div class="col-md-5">
       <div class="form-group">
         <div class="label_item">{{'contract.type' | translate}}</div>
-        <div class="col">
+        <div>
           <ng-multiselect-dropdown [(ngModel)]="type_id" placeholder="{{'choose' | translate }}"
             [settings]="dropdownTypeSettings" [data]="contractTypeList">
             <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
@@ -80,7 +80,7 @@
     <div class="col-md-5">
       <div class="form-group">
         <div class="label_item">{{'contract.connect' | translate}}</div>
-        <div class="col">
+        <div>
           <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="contractConnect" placeholder="{{'choose' | translate }}"
             [settings]="dropdownConnectSettings" [data]="contractConnectList">
             <ng-template #optionsTemplate let-item let-option="option"
@@ -127,9 +127,8 @@
     <div class="col-md-5">
       <div class="form-group">
         <div class="label_item">{{'expiration-date' | translate}} <span class="require_star">*</span></div>
-        <div class="input-line">
-          <ngx-datepicker [(ngModel)]="sign_time" [options]="options" class="date-picker input-text"></ngx-datepicker>
-          <img src="assets/img/db_calendar.svg" alt="mobifone.contract" class="input-img">
+        <div>
+          <p-calendar [(ngModel)]="sign_time" [minDate]="minDate" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
         </div>
       </div>
       <div class="form-group">
