--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -3,13 +3,13 @@
   <div class="row">
     <div class="col-md-3">
       <div>{{'createdate.start' | translate}}</div>
-      <div class="input-line">
+      <div>
         <p-calendar [(ngModel)]="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
       </div>
     </div>
     <div class="col-md-3">
       <div>{{'createdate.end' | translate}}</div>
-      <div class="input-line">
+      <div>
         <p-calendar [(ngModel)]="filter_to_date" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
       </div>
     </div>
