--- a/src/app/main/user/add-user/add-user.component.scss
+++ b/src/app/main/user/add-user/add-user.component.scss
@@ -1,65 +1,97 @@
 .required-title {
-    color: red;
+  color: red;
 }
 
 .input-data {
-    border: 1px solid #106DB6;
-    border-radius: 5px;
-    height: 33px;
-    display: flex;
-    align-items: center;
+  border: 1px solid #106DB6;
+  border-radius: 5px;
+  height: 33px;
+  display: flex;
+  align-items: center;
 
-    > img {
-        padding-left: 14px;
-    }
-
-    > input {
-        border: none;
-        outline: none;
-        padding: 5px 10px;
-        width: 100%;
-    }
-}  
+  > input {
+      border: none;
+      outline: none;
+      padding-left: 15px;
+      width: 100%;
+  }
+} 
+:host ::ng-deep {
+  .p-dropdown {
+      border: 1px solid #106DB6;
+      border-radius: 5px;
+      height: 33px;
+      width: 100%;
+      outline: 0;
+      color: black !important;
+  }
+  .p-dropdown-label {
+      padding: 5px 5px 5px 15px;
+  }
+}
 .cancel-button{
-    border: 0px;
-    border-radius: 5px;
-    height: 33px;
-    width: 100px;
-    box-sizing: border-box;
-    color: white;
-    background-color: #8B8B8B;
-    font-size: 13px;
-    margin: 0 10px;
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #8B8B8B;
+  font-size: 13px;
+  margin: 0 10px;
 }
 .save-button{
-    border: 0px;
-    border-radius: 5px;
-    height: 33px;
-    width: 100px;
-    box-sizing: border-box;
-    color: white;
-    background-color: #106DB6;
-    font-size: 13px;
-    margin: 0 10px;
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #106DB6;
+  font-size: 13px;
+  margin: 0 10px;
 }
-.input-img-calendar {
-    top: 10px;
-    right: 15px;
-    position: absolute;
+.label-header{
+  text-transform: uppercase;
+  color: #106DB6;
 }
-::ng-deep .date-picker  input {
-    display: block !important;
-    width: 100% !important;
-    height: calc(2.25rem + 2px) !important;
-    padding: .375rem .75rem !important;
-    font-size: 1rem !important;
-    line-height: 1.5 !important;
-    color: #495057 !important;
-    background-color: #fff !important;
-    background-clip: padding-box !important;
-    border: 1px solid #ced4da !important;
-    border-radius: .25rem !important;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
-    outline: 0;
-    z-index: 10000 !important;
+.content-body{
+  border: 1px solid #87CAFF;
+  border-radius: 7px;
 }
+.btn-footer{
+  text-align: center;
+  padding: 10px;
+}
+.row{
+  padding: 10px;
+}
+hr{
+  margin-top: 2px;
+  border: 1px solid #87CAFF;
+}
+.container-img-file {
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #E9F4FD;
+  margin: 10px;
+}
+
+.container-img-file-1 {
+  justify-content: center;
+  align-items: center;
+}
+
+.text-choose-file {
+  margin-top: 32px;
+  color: #106DB6;
+}
+
+.text-support-extension {
+  margin-top: 8px;
+  color: #ED1C24;
+  font-weight: 500;
+}
+  
