--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -151,9 +151,9 @@ button {
     padding: 0;
   }
   .p-calendar-w-btn, .p-calendar-w-btn .p-inputtext {
-    height: 33px;
+    height: 38px;
   }
-  .p-inputtext{
+  .p-calendar-w-btn .p-inputtext{
     border: 1px solid #106DB6 !important;
     outline: 0 !important;
     box-shadow: none !important;
