--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -39,7 +39,7 @@
   .p-calendar-w-btn, .p-calendar-w-btn .p-inputtext {
     height: 33px;
   }
-  .p-inputtext{
+  .p-calendar-w-btn .p-inputtext{
     border: 1px solid #106DB6 !important;
     outline: 0 !important;
     box-shadow: none !important;
