--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -83,6 +83,8 @@
   .p-paginator-bottom .p-ripple{
     padding: 10px;
     border-width: 0 !important;
+    height: 26px !important;
+    width: 50px !important;
   }
 
   .p-datatable-table, .ng-star-inserted{
