--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -1,5 +1,5 @@
 .item_contract {
-  border: 1px solid #1487E1;
+  border: 1px solid #106DB6;
   border-radius: 10px;
   padding: 8px;
   margin-top: 5px;
@@ -112,7 +112,7 @@
   color: #5e5e5e;
 }
 .search{
-  border: 1px solid #87CAFF;
+  border: 1px solid #106DB6;
   border-radius: 15px;
   height: 38px;
 }
