--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -37,6 +37,8 @@ input[type="file"] {
 //label item form
 .label_item{
   padding: 12px 0px 3px;
+  font-weight: 500;
+  color: #0160AE;
 }
 
 .require_star{
@@ -183,4 +185,17 @@ button {
   border: 0;
   width: 100%;
   outline:0px;
+}
+:host ::ng-deep {
+  .p-dropdown, .p-multiselect {
+      border: 1px solid #106DB6;
+      border-radius: 5px;
+      height: 38px;
+      width: 100%;
+      outline: 0;
+      color: black !important;
+  }
+  .p-dropdown-label, .p-multiselect-label {
+      padding: 7px 7px 5px 10px;
+  }
 }
