--- a/src/app/main/contract-type/detail-contract-type/detail-contract-type.component.html
+++ b/src/app/main/contract-type/detail-contract-type/detail-contract-type.component.html
@@ -1,1 +1,29 @@
-<p>detail-contract-type works!</p>
+<div class="container-fluid">
+    <div style="text-align: center; font-weight: bold">
+      <h3 style="color: #106DB6; font-family: inherit;">{{this.data.title}}</h3>
+    </div>
+    <div class="content">
+        <div class="row">  
+            <div class="col-md-12">  
+                <div class="label_item">Tên tổ chức</div>
+                <div>
+                    <div [innerHTML]="name" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-12">
+                <div class="label_item">Mã tổ chức</div>
+                <div>
+                    <div [innerHTML]="code" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+    
+        <div class="row" style="justify-content: center;padding-top: 10px;">
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
+        </div>
+    </div>
+  </div>
+  
